<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splash_fragment">

    <fragment
        android:id="@+id/splash_fragment"
        android:name="nivaldo.dh.exercise.firebase.auth.view.SplashFragment"
        android:label="@string/splash"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_splashFragment_to_loginFragment"
            app:destination="@id/login_fragment"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit"
            app:popEnterAnim="@anim/fragment_fade_enter"
            app:popExitAnim="@anim/fragment_fade_exit"
            app:popUpTo="@id/splash_fragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/login_fragment"
        android:name="nivaldo.dh.exercise.firebase.auth.view.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/register_fragment"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit"
            app:popEnterAnim="@anim/fragment_fade_enter"
            app:popExitAnim="@anim/fragment_fade_exit" />
        <action
            android:id="@+id/action_login_fragment_to_list_games_fragment"
            app:destination="@id/list_games_fragment"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit"
            app:popEnterAnim="@anim/fragment_fade_enter"
            app:popExitAnim="@anim/fragment_fade_exit"
            app:popUpTo="@id/login_fragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/register_fragment"
        android:name="nivaldo.dh.exercise.firebase.auth.view.RegisterFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_register" />

    <fragment
        android:id="@+id/list_games_fragment"
        android:name="nivaldo.dh.exercise.firebase.home.view.ListGamesFragment"
        android:label="@string/games"
        tools:layout="@layout/fragment_list_games" />

</navigation>